force-app/main/default/objects/Policy_Endorsement__c/Policy_Endorsement__c.object-meta.xml
<CustomObject>
    <label>Policy Endorsement</label>
    <nameField>
        <label>Policy Endorsement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Endorsements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>