force-app/main/default/objects/Policy_Endorsement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to filter the related lawyers on the basis of related account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policy Endorsements</relationshipLabel>
    <relationshipName>Policy_Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>