force-app/main/default/objects/Policy_Endorsement__c/fields/Account_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_City__c</fullName>
    <label>Account Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>