force-app/main/default/objects/Policy_Endorsement__c/fields/Account_Billing_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_PostalCode__c</fullName>
    <label>Account Billing PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>