force-app/main/default/objects/Policy_Endorsement__c/fields/Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_State__c</fullName>
    <label>Account Billing State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>