force-app/main/default/objects/Policy_Endorsement__c/fields/Account_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Street__c</fullName>
    <label>Account Billing Street</label>
    <type>TextArea</type>
</CustomField>