force-app/main/default/objects/Policy_Endorsement__c/fields/Aggregate_Limit__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Limit__c</fullName>
    <formula>New_Limits__r.Full_Coverage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aggregate Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>