force-app/main/default/objects/Policy_Endorsement__c/fields/AOP__c.field-meta.xml
<CustomField>
    <fullName>AOP__c</fullName>
    <label>AOP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>