force-app/main/default/objects/Policy_Endorsement__c/fields/Application_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Application_Form_Link__c</fullName>
    <label>Application Form Link</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>