force-app/main/default/objects/Policy_Endorsement__c/fields/Application_Link_Internal_User__c.field-meta.xml
<CustomField>
    <fullName>Application_Link_Internal_User__c</fullName>
    <formula>HYPERLINK(&quot;/apex/PaymentGatewaySitePage?sfInternalId=&quot;+ Id , &quot;Internal Application Form Link&quot;,&quot;_Blank&quot;)</formula>
    <label>Application Link Internal (User)</label>
    <type>Text</type>
</CustomField>