force-app/main/default/objects/Policy_Endorsement__c/fields/Approve_Endorsement_JSON__c.field-meta.xml
<CustomField>
    <fullName>Approve_Endorsement_JSON__c</fullName>
    <label>Approve Endorsement JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>