force-app/main/default/objects/Policy_Endorsement__c/fields/Attachment_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Record_Id__c</fullName>
    <label>Attachment Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>