force-app/main/default/objects/Policy_Endorsement__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <label>Attorney</label>
    <length>255</length>
    <type>Text</type>
</CustomField>