force-app/main/default/objects/Policy_Endorsement__c/fields/Attorney_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Firm_Name__c</fullName>
    <label>Attorney / Firm Name</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>