force-app/main/default/objects/Policy_Endorsement__c/fields/Check_Leap_Year__c.field-meta.xml
<CustomField>
    <fullName>Check_Leap_Year__c</fullName>
    <formula>IF(OR(
    MOD( YEAR(Endorsement_Effective_Date__c), 400 ) = 0,
    AND(
        MOD( YEAR(Endorsement_Effective_Date__c), 4 ) = 0,
        MOD( YEAR(Endorsement_Effective_Date__c), 100 ) != 0
    )
), true, false)</formula>
    <label>Check Leap Year</label>
    <type>Checkbox</type>
</CustomField>