force-app/main/default/objects/Policy_Endorsement__c/fields/Coverage_Term__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Term__c</fullName>
    <label>Coverage Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>1-4 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>6 Years</fullName>
            </value>
            <value>
                <fullName>7 Years</fullName>
            </value>
            <value>
                <fullName>8 Years</fullName>
            </value>
            <value>
                <fullName>9 Years</fullName>
            </value>
            <value>
                <fullName>10 or more years</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>