force-app/main/default/objects/Policy_Endorsement__c/fields/Date_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Date_Deleted__c</fullName>
    <label>Date Deleted</label>
    <type>Date</type>
</CustomField>