force-app/main/default/objects/Policy_Endorsement__c/fields/Days_Pro_Rated__c.field-meta.xml
<CustomField>
    <fullName>Days_Pro_Rated__c</fullName>
    <formula>Policy__r.Expiration_Date__c -  Endorsement_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Pro Rated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>