force-app/main/default/objects/Policy_Endorsement__c/fields/Endorsement_Component_Template__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Component_Template__c</fullName>
    <label>Endorsement Component Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>