force-app/main/default/objects/Policy_Endorsement__c/fields/Endorsement_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Effective_Date__c</fullName>
    <label>Endorsement Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>