force-app/main/default/objects/Policy_Endorsement__c/fields/Endorsement_Mod__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Mod__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Endorsement Mod %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>