force-app/main/default/objects/Policy_Endorsement__c/fields/Endorsement_Number__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Number__c</fullName>
    <label>Endorsement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>