force-app/main/default/objects/Policy_Endorsement__c/fields/Endorsement_Term__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Term__c</fullName>
    <label>Endorsement Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>