force-app/main/default/objects/Policy_Endorsement__c/fields/Endorsement_Type_For_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Type_For_Lawyer__c</fullName>
    <label>Endorsement Type For Lawyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Lawyer</fullName>
            </value>
            <value>
                <fullName>Change Lawyer</fullName>
            </value>
            <value>
                <fullName>Delete Lawyer</fullName>
            </value>
            <value>
                <fullName>Adjust Premium</fullName>
            </value>
            <value>
                <fullName>Cancel Policy</fullName>
            </value>
            <value>
                <fullName>Change Coverage</fullName>
            </value>
            <value>
                <fullName>ERE Transaction</fullName>
            </value>
            <value>
                <fullName>Reinstate Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>