force-app/main/default/objects/Policy_Endorsement__c/fields/Endorsement_Version__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Version__c</fullName>
    <label>Endorsement Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>