force-app/main/default/objects/Policy_Endorsement__c/fields/Enter_Manuscript_Language__c.field-meta.xml
<CustomField>
    <fullName>Enter_Manuscript_Language__c</fullName>
    <label>Enter Manuscript Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>