force-app/main/default/objects/Policy_Endorsement__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <label>Entity Name</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>