force-app/main/default/objects/Policy_Endorsement__c/fields/ERE_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ERE_Expiration_Date__c</fullName>
    <label>ERE Expiration Date</label>
    <type>Date</type>
</CustomField>