force-app/main/default/objects/Policy_Endorsement__c/fields/ERE_Months__c.field-meta.xml
<CustomField>
    <fullName>ERE_Months__c</fullName>
    <description>This will calculate the number of months between the between policy expiration date and ere expiration date.</description>
    <formula>IF(NOT(ISBLANK(ERE_Expiration_Date__c)) &amp;&amp; NOT(ISBLANK(Policy_Expiration_Date__c))
     ,(((YEAR(ERE_Expiration_Date__c) - YEAR(Policy_Expiration_Date__c) - 1) *12) + (12 - MONTH(Policy_Expiration_Date__c) +1) + MONTH(ERE_Expiration_Date__c))
     , null
) - 1</formula>
    <label>ERE Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>