force-app/main/default/objects/Policy_Endorsement__c/fields/EREExpirationDateFormula__c.field-meta.xml
<CustomField>
    <fullName>EREExpirationDateFormula__c</fullName>
    <formula>ERE_Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERE Expiration Date</label>
    <type>Date</type>
</CustomField>