force-app/main/default/objects/Policy_Endorsement__c/fields/Event_Status_formula__c.field-meta.xml
<CustomField>
    <fullName>Event_Status_formula__c</fullName>
    <formula>IF( 
ISPICKVAL(Event_Status__c, &apos;Complete&apos;) ,
&apos;Approved&apos;,IF( 
ISPICKVAL(Event_Status__c, &apos;Submitted&apos;) ,
&apos;Submitted&apos;,&apos;Pending&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Status</label>
    <type>Text</type>
</CustomField>