force-app/main/default/objects/Policy_Endorsement__c/fields/Firm_Entity__c.field-meta.xml
<CustomField>
    <fullName>Firm_Entity__c</fullName>
    <label>Firm / Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>