force-app/main/default/objects/Policy_Endorsement__c/fields/First_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>First_Aggregate__c</fullName>
    <label>First Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>