force-app/main/default/objects/Policy_Endorsement__c/fields/IL_107_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>IL_107_Multiplier__c</fullName>
    <label>IL 107 Multiplier Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>