force-app/main/default/objects/Policy_Endorsement__c/fields/IL_152_ARDC__c.field-meta.xml
<CustomField>
    <fullName>IL_152_ARDC__c</fullName>
    <label>IL 152 ARDC #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>