force-app/main/default/objects/Policy_Endorsement__c/fields/IL_152_Average_Number_of_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>IL_152_Average_Number_of_Hours_Worked__c</fullName>
    <label>IL 152 Average Number of Hours Worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>