force-app/main/default/objects/Policy_Endorsement__c/fields/IL_152_Bar_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>IL_152_Bar_Entry_Date__c</fullName>
    <label>IL 152 Bar Entry Date</label>
    <type>Date</type>
</CustomField>