force-app/main/default/objects/Policy_Endorsement__c/fields/IL_152_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>IL_152_Birthdate__c</fullName>
    <label>IL 152 Birthdate</label>
    <type>Date</type>
</CustomField>