force-app/main/default/objects/Policy_Endorsement__c/fields/IL_152_Business_Email__c.field-meta.xml
<CustomField>
    <fullName>IL_152_Business_Email__c</fullName>
    <label>IL 152 Business Email</label>
    <type>Email</type>
</CustomField>