force-app/main/default/objects/Policy_Endorsement__c/fields/IL_152_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>IL_152_Contact_Role__c</fullName>
    <label>IL 152 Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O</fullName>
                <label>Owner</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Partner</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Associate</label>
            </value>
            <value>
                <fullName>SH</fullName>
                <label>Shareholder</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Member</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Director</label>
            </value>
            <value>
                <fullName>IC</fullName>
                <label>Independent Contractor</label>
            </value>
            <value>
                <fullName>OC</fullName>
                <label>Of Counsel</label>
            </value>
            <value>
                <fullName>CE</fullName>
                <label>Contract Employee</label>
            </value>
            <value>
                <fullName>TSL</fullName>
                <label>Temporary Staff Lawyer</label>
            </value>
            <value>
                <fullName>OF</fullName>
                <label>Officer</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Employee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>