force-app/main/default/objects/Policy_Endorsement__c/fields/IL_152_First_Name__c.field-meta.xml
<CustomField>
    <fullName>IL_152_First_Name__c</fullName>
    <label>IL 152 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>