force-app/main/default/objects/Policy_Endorsement__c/fields/IL_152_ISBA__c.field-meta.xml
<CustomField>
    <fullName>IL_152_ISBA__c</fullName>
    <label>IL 152 ISBA #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>