force-app/main/default/objects/Policy_Endorsement__c/fields/IL_152_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>IL_152_Part_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IL 152 Part Time</label>
    <type>Checkbox</type>
</CustomField>