force-app/main/default/objects/Policy_Endorsement__c/fields/IL_152_Phone__c.field-meta.xml
<CustomField>
    <fullName>IL_152_Phone__c</fullName>
    <label>IL 152 Phone</label>
    <type>Phone</type>
</CustomField>