force-app/main/default/objects/Policy_Endorsement__c/fields/Is_Allow_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>Is_Allow_To_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An endorsement can be deleted by reject button through endorsement, otherwise trigger will stop it.</description>
    <label>Is Allow To Delete</label>
    <type>Checkbox</type>
</CustomField>