force-app/main/default/objects/Policy_Endorsement__c/fields/Is_Application_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Is_Application_Endorsement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Application Endorsement</label>
    <type>Checkbox</type>
</CustomField>