force-app/main/default/objects/Policy_Endorsement__c/fields/Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lawyer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>AccountContactJunction__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>AccountContactJunction__c.Contact__r.Type__c</field>
            <operation>equals</operation>
            <value>Lawyer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AccountContactJunction__c</referenceTo>
    <relationshipLabel>Policy Endorsements</relationshipLabel>
    <relationshipName>Policy_Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>