force-app/main/default/objects/Policy_Endorsement__c/fields/Lawyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Name__c</fullName>
    <formula>IF(Lawyer__c &lt;&gt; null, Lawyer__r.Lawyer_Name__c,  IF( Policy_Lawyer__c &lt;&gt; null, Policy_Lawyer__r.Lawyer__r.Lawyer_Name__c,  IL_152_First_Name__c+ IF(IL_152_Middle_Name__c &lt;&gt; null, &apos; &apos;+ IL_152_Middle_Name__c , &apos;&apos;)  +&apos; &apos;+  IL_152_Last_Name__c ) )</formula>
    <label>Lawyer Name</label>
    <type>Text</type>
</CustomField>