force-app/main/default/objects/Policy_Endorsement__c/fields/Lawyer_Prior_Act_Date__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Prior_Act_Date__c</fullName>
    <formula>Mid( TEXT(Policy_Lawyer__r.Prior_Act_Date__c),6,2)+&quot;-&quot;+
right( TEXT(Policy_Lawyer__r.Prior_Act_Date__c),2)+&quot;-&quot;+
left ( TEXT(Policy_Lawyer__r.Prior_Act_Date__c),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lawyer Prior Act Date</label>
    <type>Text</type>
</CustomField>