force-app/main/default/objects/Policy_Endorsement__c/fields/Manuscript__c.field-meta.xml
<CustomField>
    <fullName>Manuscript__c</fullName>
    <label>Manuscript</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>