force-app/main/default/objects/Policy_Endorsement__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>