force-app/main/default/objects/Policy_Endorsement__c/fields/Name2__c.field-meta.xml
<CustomField>
    <fullName>Name2__c</fullName>
    <label>Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>