force-app/main/default/objects/Policy_Endorsement__c/fields/Name_Of_Insured__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Insured__c</fullName>
    <label>Name Of Insured</label>
    <length>50</length>
    <type>Text</type>
</CustomField>