force-app/main/default/objects/Policy_Endorsement__c/fields/New_Limits__c.field-meta.xml
<CustomField>
    <fullName>New_Limits__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Limits</label>
    <referenceTo>ILF_Coverage_Factor__c</referenceTo>
    <relationshipLabel>Policy Endorsements</relationshipLabel>
    <relationshipName>Policy_Endorsements</relationshipName>
    <type>Lookup</type>
</CustomField>