force-app/main/default/objects/Policy_Endorsement__c/fields/Old_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Old_Aggregate__c</fullName>
    <label>Old Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>