force-app/main/default/objects/Policy_Endorsement__c/fields/Old_Per_Claim__c.field-meta.xml
<CustomField>
    <fullName>Old_Per_Claim__c</fullName>
    <label>Old Per Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>