force-app/main/default/objects/Policy_Endorsement__c/fields/Old_Premium_of_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Old_Premium_of_Lawyer__c</fullName>
    <formula>Policy_Lawyer__r.Premium__c *(-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Premium of Lawyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>