force-app/main/default/objects/Policy_Endorsement__c/fields/Override_10_10__c.field-meta.xml
<CustomField>
    <fullName>Override_10_10__c</fullName>
    <label>Override 10x10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>