force-app/main/default/objects/Policy_Endorsement__c/fields/Override_NBA_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_NBA_Expire_Date__c</fullName>
    <label>Override NBA Expire Date</label>
    <type>Date</type>
</CustomField>