force-app/main/default/objects/Policy_Endorsement__c/fields/Override_Rating__c.field-meta.xml
<CustomField>
    <fullName>Override_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Rating</label>
    <type>Checkbox</type>
</CustomField>