force-app/main/default/objects/Policy_Endorsement__c/fields/Pending_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Pending_Status_Message__c</fullName>
    <formula>&quot;Please click the \&quot;Save\&quot; button to update the application status to \&quot;Pending.\&quot;&quot;</formula>
    <label>Pending Status Message</label>
    <type>Text</type>
</CustomField>