force-app/main/default/objects/Policy_Endorsement__c/fields/Per_Claim_Limit__c.field-meta.xml
<CustomField>
    <fullName>Per_Claim_Limit__c</fullName>
    <formula>New_Limits__r.Coverage_Max_Per_Claim__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Claim Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>