force-app/main/default/objects/Policy_Endorsement__c/fields/PER_LAWER__c.field-meta.xml
<CustomField>
    <fullName>PER_LAWER__c</fullName>
    <description>For Endorsement 177</description>
    <label>PER LAWYER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>