force-app/main/default/objects/Policy_Endorsement__c/fields/PER_POLICY__c.field-meta.xml
<CustomField>
    <fullName>PER_POLICY__c</fullName>
    <description>For endorsement 177</description>
    <label>PER POLICY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>