force-app/main/default/objects/Policy_Endorsement__c/fields/Person_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Person_Attorney__c</fullName>
    <label>Person / Attorney</label>
    <length>255</length>
    <type>Text</type>
</CustomField>