force-app/main/default/objects/Policy_Endorsement__c/fields/Policy_Canel_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Canel_Date__c</fullName>
    <description>If cancel date is populated on policy then populate the value in this formula otherwise keep it blank.</description>
    <formula>IF(NOT(ISNULL(Policy__r.Cancel_Date__c)), Policy__r.Cancel_Date__c, null)</formula>
    <label>Policy Cancel Date</label>
    <type>Date</type>
</CustomField>