force-app/main/default/objects/Policy_Endorsement__c/fields/Policy_Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Policy_Contact_FirstName__c</fullName>
    <formula>Policy__r.Firm_Contact_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Contact FirstName</label>
    <type>Text</type>
</CustomField>