force-app/main/default/objects/Policy_Endorsement__c/fields/Policy_Endorsement_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Policy_Endorsement_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Policy Endorsement External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>