force-app/main/default/objects/Policy_Endorsement__c/fields/Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Expiration_Date__c</fullName>
    <description>If expiration date is not null then set the expiration date as the value otherwise set the value as blank.</description>
    <formula>IF(NOT(ISNULL(Policy__r.Expiration_Date__c)), Policy__r.Expiration_Date__c, null)</formula>
    <label>Policy Expiration Date</label>
    <type>Date</type>
</CustomField>