force-app/main/default/objects/Policy_Endorsement__c/fields/Policy_Lawyer_Json__c.field-meta.xml
<CustomField>
    <fullName>Policy_Lawyer_Json__c</fullName>
    <label>Policy Lawyer Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>