force-app/main/default/objects/Policy_Endorsement__c/fields/Policy_Premium__c.field-meta.xml
<CustomField>
    <fullName>Policy_Premium__c</fullName>
    <formula>Policy__r.Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>