force-app/main/default/objects/Policy_Endorsement__c/fields/Policy_Underwriter_Email__c.field-meta.xml
<CustomField>
    <fullName>Policy_Underwriter_Email__c</fullName>
    <formula>Policy__r.Underwriter_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Underwriter Email</label>
    <type>Text</type>
</CustomField>