force-app/main/default/objects/Policy_Endorsement__c/fields/Policy_Underwriter_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Underwriter_Name__c</fullName>
    <formula>Policy__r.Underwriter_User__r.FirstName + &quot; &quot; +  Policy__r.Underwriter_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Underwriter Name</label>
    <type>Text</type>
</CustomField>