force-app/main/default/objects/Policy_Endorsement__c/fields/Policy_Underwriter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Policy_Underwriter_Phone__c</fullName>
    <formula>Policy__r.Underwriter_Direct_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Underwriter Phone</label>
    <type>Text</type>
</CustomField>