force-app/main/default/objects/Policy_Endorsement__c/fields/Policy_Underwriter_Title__c.field-meta.xml
<CustomField>
    <fullName>Policy_Underwriter_Title__c</fullName>
    <formula>Policy__r.Underwriter_User_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Underwriter Title</label>
    <type>Text</type>
</CustomField>