force-app/main/default/objects/Policy_Endorsement__c/fields/Premium_5_5__c.field-meta.xml
<CustomField>
    <fullName>Premium_5_5__c</fullName>
    <label>Premium 5x5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>