force-app/main/default/objects/Policy_Endorsement__c/fields/PremiumFormula__c.field-meta.xml
<CustomField>
    <fullName>PremiumFormula__c</fullName>
    <formula>Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>